--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Holy cow!"
+title: "Huijuan Zhang"
 ---
 
-### I have a webpage!
+It's a product of Data Science I homework 4!
 
-And I can put all kinds of stuff on it!
+<img src="images/photo.jpeg" style="width:50%">
