--- a/resume.Rmd
+++ b/resume.Rmd
@@ -14,24 +14,25 @@ Biostatistics, _Master of Science_
 
 * __Relevant courses__: Data Science I (Using R), Biostatistical Methods I. Biostatistical Methods II (Generalized Linear Models, Survival Analysis), Statistical Machine Learning (Using Python), Pharmaceutical Statistics (Using SAS), etc. (Spring 2018)
 
-<p align="right">Shanghai, China | Sep 2013 - June 2017</p>
+<p align="right">Shanghai, China | June 2017</p>
 
 __Fudan University__, _Department of Chemistry_
 
 Chemistry, _Bachelor of Science_
 
-* __Honors and Awards__: Excellent Student of Fudan University, 2013-2014; Third Prize of Excellent Undergraduate Scholarship, etc.
-
 * __Relevant Courses__: Python Programming, C Programming, Advanced Mathematics, Probability Theory and Mathematical Statistics, etc.
 
-* __Publications__:
-
-    + Jie Pan, Hong Yuan, Xiaoxue Zhang, __Huijuan Zhang__, Qiming Xu, Yajun Zhou, Zhongxian Huang, Xiangshi Tan. Probing the Molecular Mechanism of Human Soluble Guanylate Cyclase Activation by NO in vitro and in vivo. _Sci. Rep_. __7__, 43112 (2017).
-
-    + Jie Pan, Xiaoxue Zhang, Hong Yuan, Qiming Xu, __Huijuan Zhang__, Yajun Zhou, Zhong-Xian Huang, Xiangshi Tan. The molecular mechanism of heme loss from oxidized soluble guanylate cyclase induced by conformational change. _Biochim Biophys Acta_ __1864__, 488–500 (2016).
+* __Honors and Awards__: Excellent Student of Fudan University, 2013-2014; Third Prize of Excellent Undergraduate Scholarship, etc.
 
 ***
-### Programming Experience
+### Academic Project
+<p align="right">New York, NY | Dec 2017</p>
+
+__R Programming Course Project,__ _Data Analysis and Visualization_
+
+* Collaborated with group members to clean and perform exploratory analyses to database US mass shooting released by Stanford University. Provided insights to mass shooting problem and visualized results by hosting websites in GitHub and
+Shinyapps.io.
+
 <p align="right">Shanghai, China | May 2017</p>
 
 __Python Programming Course Project__, _Text Generation Based on Markov Process_
@@ -39,61 +40,46 @@ __Python Programming Course Project__, _Text Generation Based on Markov Process_
 * Analyzed an English text to generate a dictionary with sequence and frequency of words by splitting character strings and extracting words successively. Randomly generated a new text with correct grammar and semantics using the dictionary.
 
 ***
-### Internship Experience
+### Professional Experience
 <p align="right">Shanghai, China | Oct 2016 - Nov 2016</p>
 
-__Shanghai JiaoFu Biomedical Technology Co., Ltd__, _Network Meta-Analysis_
+__Shanghai JiaoFu Biomedical Technology Co., Ltd__, _Analysis Intern_
 
-* Searched project relevant meta-analysis documents through databases such as PubMed and Embase by medical subject headings and entry terms. Retrieved studies included in the meta-analysis documents and added other latest studies as a complement.
+* Searched and retrieved project relevant documents through several databases. Extracted and cleaned data from randomized controlled trials. Employed R for modeling and graphing software to attain plots. Described results and wrote discussion.
 
-* Extracted data from Randomized Controlled Trials and reorganized it. Employed GeMTC to get Consistency Model and Rank Probability. Used GraphPad Prism to attain graphs of SUCRA with Cumulative Probability. Obtained Network Plots, Forest Plots and Node-Splitting
-Plots from R (with RStudio). Applied STATA to get Funnel plots and perfected the graphs by AI.
+* Discussed with colleagues to work out solutions to problems during course of project.
 
-* Described the results obtained from data analysis and wrote a discussion of it.
-
-***
-### Research Experience
 <p align="right">Jerusalem, Israel | Jul 2016 - Aug 2016</p>
 
-__2016 Summer Research__, University of Hebrew, _upervisor: Dr. Einav Gross_
+__University of Hebrew__, School of Medicine, _Student Researcher_
 
-__Project__: Single Nucleotide Polymorphism (SNP) mapping of three mutants of _C. elegans_
+* Adapted fast to new environment and built good relationship with people from different cultures.
 
-* Operated with model organism _C. elegans_, including maintenance, heat shock, crossing and bordering assay. Selected SNPs and
-designed primers for mapping. Examined the positions of the mutations. Applied different methods including further interval mapping,
-sequencing and fluorescence detection to different mutants according to initial results.
+* Quickly learned about new project and got familiar with all experimental operations. Designed and implemented experiments to examine position of mutation. Analyzed results by calculation and comparison with databases. Got encouraging preliminary results which were used to launch next project.
 
-* Analyzed the results of each step through calculation, alignment and comparison with several databases.
+* Presented all works to research group members and obtained high appraisal from supervisor.
 
 <p align="right">Shanghai, China | Dec 2014 – Jun 2017</p>
 
-__The Student Scientific Innovation Act__, Fudan University, _Supervisor: Prof. Xiangshi Tan_
+__Fudan University__, Department of Chemistry, _The Student Scientific Innovation Act_
 
-__Project__: Molecular Mechanism of Heme Loss from Oxidized Soluble Guanylate Cyclase Induced by Conformational Change
-
-* Performed transformation to get E. coli colonies with recombinant bacmid. Transfected and amplified baculovirus stock. Trial-expressed protein and assayed the expression product. Expressed and characterized recombinant protein by Spodoptera frugiperda 9 cells.
-
-* Published two papers as a co-author.
+* Operated and maintained baculovirus expression systems of whole laboratory. Cooperated with lab members to express and characterize recombinant protein. Published 2 papers as co-author.
 
 <p align="right">College Station, US | Aug 2015</p>
 
-__2015 Summer Research__, Texas A&M University, _Supervisor: Prof. Guan Zhu_
+__Texas A&M University__, College of Veterinary Medicine, _Student Researcher_
 
-__Project__: Gene Knockout of _Clostridium difficile_
-
-* Applied CRISPR-Cas 9 system to knockout specific gene. Identified the gene positions of Acs/CODH and designed gRNA. Selected
-resistance marker to construct DNA editing templates. Designed primers for PCR by Primer-BLAST, ePrime and Beacon Designer.
+* Learned about new genetic method by reading scientific papers. Wrote proposal of its application in order to study gene function in specific bacteria that cause colitis.
 
 ***
-### Leadership and Extracurricular Activities
+### Leadership Experience
 <p align="right">Shanghai, China | Sep 2013 - Jul 2015</p>
 
-__Organization Department, Youth League Committee, Fudan University__, Assistant Minister
+__Youth League Committee, Fudan University__, Assistant Minister
 
-* Organized the Annual Conference of Excellent Student Assessment, Fudan University and the Annual China’s Youth Awarding Ceremony,
-Fudan University. Managed daily routine in Organization Department.
+* Organized Annual Conference of Excellent Student Assessment, Fudan University and Annual China’s Youth Awarding Ceremony, Fudan University. Managed daily routine in Organization Department.
 
 ***
 ### Skills
 
-Currently learning R programming; Some knowledge of Python programming, C programming; Strong knowledge of MS Office (Word, Excel, PowerPoint). Chinese (Native).
+R programming; Python programming; Some knowledge of SQL, SAS and C programming; Strong knowledge of MS Office (Word, Excel, PowerPoint). Chinese (Native).
